# mindmesh

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  compose.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.yml  experiments.ipynb  requirements.txt  run.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  db.py  main.py  models.py  pyproject.toml  utils.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ai_settings.py  0003_note_scope.py  0004_archive_conversations.py
backend/app/: main.py
backend/app/ai/embeddings/: __init__.py  chunking.py  local.py
backend/app/ai/prompts/: __init__.py  templates.py
backend/app/ai/providers/: __init__.py  base.py  groq.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  qdrant.py  session.py
backend/app/models/: __init__.py  ai_settings.py  base.py  conversation.py  embedding.py  journal.py  note.py  tag.py  user.py
backend/app/repositories/: content_repository.py  conversation_repository.py  user_repository.py
backend/app/schemas/: ai_settings.py  chat.py  common.py  conversation.py  document.py  journal.py  note.py  search.py  tag.py  user_schemas.py
backend/app/services/: agents.py  ai_settings_service.py  chat_service.py  content_service.py  document_service.py  document_storage.py  search_service.py  user_service.py  vector_service.py
backend/tests/: test_agents.py  test_ai_settings.py  test_chunking.py  test_document_service.py  test_health.py
(+82 files in other folders)
