[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindmesh-backend"
version = "0.1.0"
description = "Backend for MindMesh AI journaling application"
authors = [
    {name = "MindMesh Team"},
]
dependencies = [
    "fastapi>=0.115.13,<0.116",
    "starlette>=0.40,<0.47",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings",
    "email-validator",
    "qdrant-client",
    "fastembed",
    "httpx",
    "python-multipart",
    "pypdf",
    "python-docx",
    "python-pptx",
    "python-jose[cryptography]",
    "passlib",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
